# AI-personalBI-assistaint

./: .env.example  .gitignore  Dockerfile.api  LICENSE  Makefile  Modelfile  PersonalBI.command  README.md  docker-compose.yml  legacy_streamlit_features.md  main.py  pyproject.toml  skills-list.txt  test.py  transformation_summary.md  webapp.py
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
app/: common.py  dashboard.py  data_editor.py  services.py  settings.py  webapp.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CatalogueView.jsx  SankeyChart.jsx  SettingsView.jsx  TransactionsTable.jsx  TransactionsView.jsx
scripts/: deduplicate_data.py
src/: extractor.py  feedback.py  gmail_client.py  graph.py  main.py  models.py  prompts.py
src/api/: main.py  schemas.py
src/api/routes/: categories.py  merchants.py  profiles.py  transactions.py  upload.py
src/auto_bi/: main.py
src/auto_bi/core/: configurator.py  detector.py  extractor.py  ingestion.py  noise_assistant.py  process.py  recovery.py  rule_assistant.py
src/auto_bi/core/components/: cache.py  classifier.py  search.py
src/auto_bi/utils/: bank_profile.py  config.py  feedback.py  gmail_client.py  graph.py  model_manager.py  models.py  prompts.py  usage_manager.py  utils.py
src/database/: init_db.py  models.py  seed.py  session.py
src/parser/: extractor.py
src/scraper/: gmail_client.py
src/services/: ai_pipeline.py  data_service.py  extractor.py  ingestion.py  ingestion_service.py
src/services/components/: cache.py  classifier.py  search.py
src/utils/: bank_profile.py  config.py  model_manager.py
src/worker/: celery_app.py  tasks.py
